# time_travel

./: .gitignore  LICENSE  analyze_data.py  boundary_investigation.py  create_visualizations.py  debug_simulation.py  detailed_experiments.py  experiments.py  focused_experiment.py  readme.md  requirements.txt  run_experiments.py  simulation.py  test_simulation.py  time_cell.py  visualize.py
fast_sim/: Cargo.toml
fast_sim/src/: main.rs
results/: comprehensive_results.json  focused_results.json  pre_cycle_analysis.json
