[package]
name = "time_travel_sim"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true

[dependencies]
rand = "0.8"
rustc-hash = "1.1"  # Fast hash for the history hashmap
rayon = "1.8"       # Parallel iteration
indicatif = "0.17"  # Progress bar
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
